90 percent responsive styling done, need resp. style on output, and wierd input align issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,9 @@
 	box-sizing: border-box;
 	font-family: 'Roboto Mono', monospace;
 }
+#outer-main{
+	margin-left: 25px;
+}
 #page-head {
 	font-family: 'Roboto Mono', monospace;
 	color: #00FF23;
@@ -14,14 +17,34 @@
 #title h1{
 	padding: 25px 0px 0px 25px;
 }
-@media (max-width: 750px){
+@media (max-width: 720px){
 	#page-head{
 		font-size: 35px;
 		padding: 5px 0px 0px 5px;
-		height: 120px;
+		height: 100px;
 	}
 	#title h1{
 		margin-bottom: 5px;
+		padding-top: 15px;
+	}
+}
+@media (max-width: 655px){
+	#search-button{
+		margin: 15px 0px 10px 0px;
+	}
+}
+@media (max-width: 565px){
+	#job-title, #search-location{
+		margin: 15px 0px 10px 0px;
+	}
+	#search-button{
+		display: block;
+		margin: 5px 0px 15px 0px;
+	}
+}
+@media (max-width: 440px){
+	#intro{
+		margin-bottom: 15px;
 	}
 }
 /*blink animation*/
@@ -39,7 +62,7 @@ div #intro{
 	font-family: 'Roboto Mono', monospace;
 	font-size: 18px;
 	font-weight: bold;
-	margin: 25px 0px 25px 25px;
+	margin: 20px 0px 25px 0px;
 }
 input {
 	width: 250px;
@@ -86,7 +109,6 @@ button{
 	vertical-align: middle;
 }
 #search-button{
-	margin-left: 10px;
 	border-radius: 3px;
 	border: none;
 	width: 100px;
@@ -95,12 +117,15 @@ button{
 	color: #00FF23;
 	font-size: 18px;
 }
+button{
+	margin-left: 10px;
+}
 #search-button:hover{
 	background-color: #00FF23;
 	color: black;
 }
 #job-title{
-	margin: 0px 10px 0px 25px;
+	margin: 0px 10px 0px 0px;
 }
 #output-list{
 	margin: 30px 0px 0px 25px;
